main_svc: доработан подсчет количества просмотров